openshift-deploy/deploy.yaml

kind: Namespace
apiVersion: v1
metadata:
  name: demo-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: demo-app
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: postgres
          image: docker.io/library/postgres:10.15-alpine
          ports:
            - containerPort: 5432
              name: postgredb
          volumeMounts:
            - name: postgredb
              mountPath: /var/lib/postgresql
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: postgredb
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: gp2
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  namespace: demo-app
  name: service-postgres
  labels:
    app: database
spec:
  ports:
    - port: 5432
  selector:
    app: database
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo-app
  name: flask-backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: smrcascao/workshop:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "2000m"
              memory: "1024Mi"
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  namespace: demo-app
  name: service-flask-backend
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: flask-app
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: demo-app
  name: service-flask-backend-route
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: service-flask-backend
